# Receipts

./: .gitignore  Cargo.toml  GEMINI.md  README.md  default.nix  flutter_rust_bridge.yaml  pubspec.yaml
app/: README.md  (+1 more)
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: simple.rs
rust/: Cargo.toml
rust/.sqlx/: query-01237e28f1db884f518cbb4c7ddcc911855c4badeef5a0cf3656be6e0040fcac.json  query-02861a349281351886423f0af68bfc2e6c7f1b865eff13182e4e0345761edca4.json  query-44c3661ec3b9535706b58f5684850a029e8a29d7c6d9d0d9304ed5421ddc8e14.json  query-6b1f28e087fc765edbf1697117c0604ff9e468227eceeaf8732b10be8a55cc20.json  query-6cb14b93a998c9b07cfed62b8f78eb4ba7e441e39b924e7447b7ca027e29cfa3.json  query-8b0de16ac7e25fbb8cabb8c08ca10c01ea595bfcb5d7dbd0c5220b0a8eac9ed2.json  query-8f3406ca4cac2e5a4e3b9f4d83f4cede5a4d3cf14665d566ed76d38e5d53ffa5.json  query-982aac81c6980169ae5f278e7ccd7859fd9b667a911c6ebca5129a7511b43635.json  query-aa9b44ff912d2faa5e8cac71f0742e412d9c36f276a6cd413ec7fe34ee65ba3d.json  query-b3c8b68ce8e1143c72660909af5e6b6a46bd7188f6f128a27f55e3785b7371f0.json  query-bea314d0dd76f196d1cdde1f6e8ae63a3b3af8ac5fa8c0062284fae161411578.json  query-c018c3cd5c9483d8cfbfad3c12c9704acc076e31adadb49f4fc0a769e605668e.json  query-c8f58febacb73a87be6dea855f6592c153f7ddd448a6e6f5ea018f3ee0a69aad.json  query-c92041598283ccec29911371f9e8082ef5b63d31774d5a2729a6038df7838de8.json  query-cf45558fc6a1c69aa512e22994538024844c7aab03f362e769f40147b0f17553.json  query-d83dc6f2a191c146d5ed06fbaad5e0e53d310b177909dbdbe2965831b01bb968.json
rust/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_new_receipt_schema.down.sql  0002_new_receipt_schema.up.sql  0003_breaking_cleanup.sql  0004_fix_receipt_fields.down.sql  0004_fix_receipt_fields.up.sql  0005_add_item_id.down.sql  0005_add_item_id.up.sql  0006_create_item_id_ean_map.down.sql  0006_create_item_id_ean_map.up.sql
rust/src/: db.rs
rust/src/api/: card.rs  database.rs  mod.rs  receipts.rs
(+85 files in other folders)
