[package]
name = "rust_lib_receipts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.43"
dotenvy = { version = "0.15.0", package = "dotenv" }
fix = "0.1.1"
flutter_rust_bridge = { version = "=2.11.1", features = ["anyhow", "backtrace", "chrono", "log"] }
futures = "0.3.32"
log = "0.4.29"
once_cell = "1.21.4"
openidconnect = { version = "4.0.1", features = ["accept-string-booleans"] }
reqwest = { version = "0.12.28", default-features = false, features = ["charset", "json", "rustls-tls"] }
rust_decimal = "1.40.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-async-std", "macros", "migrate", "rust_decimal"] }
strum = { version = "0.28.0", features = ["strum_macros"] }
strum_macros = "0.28.0"
# tokio = { version = "1.51.1", features = ["full"] }
tracing-subscriber = "0.3.22"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
