[package]
name = "rust_lib_shopledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
chrono = { version = "0.4.31", features = ["serde", "wasmbind"] }
rust_decimal = { version = "1.30.0", features = ["serde", "db-postgres"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
